--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Teamspeak List</title>
+    <title>TeamSpeak List - {{ $.server.Name }}</title>
     <link rel="stylesheet" href="/static/bootstrap-dark.min.css" />
     <link href="/static/favicon.png" rel="shortcut icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,7 +20,11 @@
 <body>
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark" style="background-color: #0d619e !important">
     <div class="container">
-        <a class="navbar-brand" href="/">Teamspeak List</a>
+        <a class="navbar-brand" href="/">{{ $.server.Name }}</a>
+
+        <div class="float-right">
+            TeamSpeak List
+        </div>
     </div>
 </nav>
 
@@ -29,53 +33,50 @@
 
     {{ range $i, $channel := .channels }}
         <div class="channel table-responsive">
-            <h3><small>#{{ $channel.ID }}</small> - {{ $channel.ChannelName }}</h3>
+            <h3 class="pb-2">&num;{{ $channel.ID }} - {{ $channel.ChannelName }}</h3>
 
-            {{ $hasUsers := false }}
+            {{ $numUsers := 0 }}
 
             {{ range $j, $user := $users }}
                 {{ if eq $user.ChannelID $channel.ID }}
-                    {{ $hasUsers = true }}
+                    {{ $numUsers = add $numUsers 1 }}
                 {{ end }}
             {{ end }}
 
-
-            {{ if $hasUsers }}
+            {{ if gt $numUsers 0 }}
                 <table style="width: 100%;" class="table table-striped table-bordered">
                     <tr>
                         <th>Nickname</th>
                         <th>OS</th>
                         <th class="text-center">Microphone Muted?</th>
                         <th class="text-center">Speakers Muted?</th>
-                        <th class="text-center">Bandwidth Wasted</th>
                     </tr>
+
+                    {{ $userIndex := 0 }}
+
                     {{ range $j, $user := $users }}
-                        {{ if eq $user.ChannelID $channel.ID }}
-                            <tr>
-                                <td>{{ $user.Nickname }}{{ with $user.PhoneticNickname }}<br><small><em>noun</em>: /{{ $user.PhoneticNickname }}/</small>{{ end }}</td>
+                        <tr>
+                            {{ if eq $user.ChannelID $channel.ID }}
+                                <td>{{ $user.Nickname }}</td>
                                 <td>{{ $user.Platform }}</td>
                                 <td class="text-center">{{ yes $user.InputMuted }}</td>
                                 <td class="text-center">{{ yes $user.OutputMuted }}</td>
-                                <td class="text-center">{{ bytes $user.TotalBytesDownloaded }} down / {{ bytes $user.TotalBytesUploaded }} up</td>
-                            </tr>
-                        {{ end }}
-                    {{ else }}
-                        <p>nobody likes this channel</p>
+
+                                {{ $userIndex = add $userIndex 1 }}
+                            {{ end }}
+                        </tr>
                     {{ end }}
                 </table>
             {{ end }}
         </div>
-    {{ else }}
-        <br><br>
-        <p>eep! no data yet...</p>
     {{ end }}
 </div>
 
 <footer class="text-muted">
     <div class="container">
-        <b>updated {{ .updated }}</b><br><br>
+        <b>Updated {{ .updated }}. Server online for {{ secondsToDuration $.server.Uptime }}.</b><br><br>
 
-        <em>A slightly less useless project by seejy</em>
+        <em>A slightly less useless, but maybe harder to read? project by seejy</em>
     </div>
 </footer>
 </body>
